--- a/contribs/gmf/apps/oeedit/contextualdata.html
+++ b/contribs/gmf/apps/oeedit/contextualdata.html
@@ -4,7 +4,7 @@
       Swiss grid (LV03)
     </td>
     <td>
-      {{coord_21781|ngeoNumberCoordinates}}
+      {{coord_21781|ngeoNumberCoordinates:0:'{x} / {y}'}}
     </td>
   </tr>
   <tr>
@@ -12,7 +12,7 @@
       Wgs Coord.
     </td>
     <td>
-      {{coord_4326|ngeoNumberCoordinates:2:'{y} {x}'}}
+      {{coord_4326|ngeoNumberCoordinates:2:'{y} / {x}'}}
     </td>
   </tr>
   <tr>
