--- a/contribs/gmf/apps/oeedit/contextualdata.html
+++ b/contribs/gmf/apps/oeedit/contextualdata.html
@@ -28,7 +28,7 @@
       Elevation (SRTM)
     </td>
     <td>
-      {{srtm}} [m]
+      {{srtm | number}} [m]
     </td>
   </tr>
   <tr>
@@ -36,7 +36,7 @@
       Elevation (Aster)
     </td>
     <td>
-      {{aster}} [m]
+      {{aster | number}} [m]
     </td>
   </tr>
 </table>
